# sachi

./: pyproject.toml
sachi/: __main__.py  banner.py  cli.py  results.py  sachi.py  utils.py
sachi/commands/: dir.py
